# ModBahuang

./: .gitignore  LICENSE  README.md  StableDiffusionUI_ngrok_sagiodev.ipynb  toi.sln
.github/ISSUE_TEMPLATE/: ----.md
FemaleOnlyExist/: FemaleOnlyExist.cs  FemaleOnlyExist.csproj
FemaleOnlyExist/Properties/: AssemblyInfo.cs
Hylas/: GoCache.cs  Hylas.cs  Hylas.csproj  ResLoadAsyncPatch.cs  ResourcesLoadPatch.cs  SpriteParam.cs  Utils.cs  Worker.cs
Hylas/Properties/: AssemblyInfo.cs
NoMeansYes/: NoMeansYes.cs  NoMeansYes.csproj
NoMeansYes/Properties/: AssemblyInfo.cs
Villain/: ConfClassRecordStore.cs  ConfInitBridge.cs  Env.cs  Extensions.cs  Il2CppHelper.cs  Item.cs  Logger.cs  PatchManager.cs  Trampoline.cs  Villain.cs  Villain.csproj
Villain/Properties/: AssemblyInfo.cs
metadata_unpacker/: Cargo.toml
metadata_unpacker/src/: main.rs
