[package]
name = "installer"
version = "0.1.0"
authors = ["lolligun <80769475+lolligun@users.noreply.github.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
regex = "1.4.3"
simplelog = "0.9.0"
log = "0.4.14"